--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <section class="products">
         <h2>Popüler Ürünler</h2>
         <div class="product-list">
-            <div class="product" data-product-id="1" data-product-name="Bioderma 200ml Serum" data-product-price="79.99">
-                <img src="C:\Users\90507\Downloads\bioderma-sebium-foaming-gel-200-ml-tup-a59a.jpg" alt="Bioderma 200ml Serum">
+            <div class="product" data-product-id="1" data-product-name="Bioderma 200ml Serum" data-product-price=src:bioderma-sebium-foaming-gel-200-ml-tup-a59a alt="Açıklama">
+
                 <p>Bioderma 200ml Serum</p>
                 <span>₺79.99</span>
                 <button class="add-to-cart">Sepete Ekle</button>
